--- a/HTMLMain.html
+++ b/HTMLMain.html
@@ -13,7 +13,7 @@
         </tr>
         <tr>
         <th headers="paris" id="day1"> 1 day </th>
-        <td headers="paris day1 big"> 11 euros</td> 
+        <td headers="paris day1 test"> 11 euros</td> 
         <td headers="berlin day1 big"> 50 euros </td>
         </tr>
     </tr>
