--- a/HTMLMain.html
+++ b/HTMLMain.html
@@ -13,7 +13,7 @@
         </tr>
         <tr>
         <th headers="paris" id="day1"> 1 day </th>
-        <td headers="test day1 paris"> 11 euros</td> 
+        <td headers="test paris day1"> 11 euros</td> 
         <td headers="berlin day1 big"> 50 euros </td>
         </tr>
     </tr>
