--- a/HTMLMain.html
+++ b/HTMLMain.html
@@ -13,8 +13,8 @@
         </tr>
         <tr>
         <th headers="paris" id="day1"> 1 day </th>
-        <td headers="first test day1"> 11 euros</td> 
-        <td headers="second test big"> 50 euros </td>
+        <td headers="paris day1 small"> 11 euros</td> 
+        <td headers="berlin test big"> 50 euros </td>
         </tr>
     </tr>
 </tbody>
